namespace CabinetInfirmier;

public class Adresse
{
    
}